finished homework / misc updates to header and footer

--- a/M02/INCLASS/FORMS/Parking.html
+++ b/M02/INCLASS/FORMS/Parking.html
@@ -23,5 +23,14 @@ Parking Garage
         	<td><input name="Submit" type="submit" value="Calculate Charge" /></td>
             <td><input name="Reset" type="reset" value="Reset"/></td>
         </tr>
+
+        </table>
+
+        <table>
+        <tr>
+            <td><h1>test1</h1></td>
+            <td><h1>test2</h1></td>
+        </tr>
+        </table>
 </body>
 </html>
