--- a/M03/INCLASS/M3_S_F/Scholarship.html
+++ b/M03/INCLASS/M3_S_F/Scholarship.html
@@ -11,7 +11,7 @@ Web Forms: Redisplaying the Web form
 </head>
 <body>
 <h2 style = "text-align:center">Scholarship Form</h2>
-<form name = "scholarship" action = "ScholarshipStartup.php" method = "post">
+<form name = "scholarship" action = "Scholarship.php" method = "post">
 <p>First Name: <input type="text" name="fName" /></p>
 <p>Last Name: <input type="text" name="lName" /></p>
 <p>Major:<input type="text" name="major" /></p>
