--- a/M03/HOMEWORK/HW2/Q3/StateCapitals.html
+++ b/M03/HOMEWORK/HW2/Q3/StateCapitals.html
@@ -9,6 +9,7 @@ New England State Capitals Quiz
     <meta charset="utf-8"/>
     <title>New England State Capitals</title>
     <link rel="stylesheet" type="text/css" href="../../../../STATIC/common.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/index.css"/>
 </head>
 
 <body>
@@ -18,32 +19,32 @@ New England State Capitals Quiz
 <div class="container">
     <div class="card">
         <h3>Civics Quiz - New England State Capitals:</h3>
-        <form method="get" id="StateCapitalsForm">
+        <form  method="get" id="StateCapitalsForm" >
 
             <table>
                 <tr>
                     <td>The capital of Connecticut is:</td>
-                    <td><input type="text" name="Connecticut" size="25"/></td>
+                    <td><input required type="text" name="Connecticut" size="25"/></td>
                 </tr>
                 <tr>
                     <td>The capital of Maine is:</td>
-                    <td><input type="text" name="Maine" size="25"/></td>
+                    <td><input required type="text" name="Maine" size="25"/></td>
                 </tr>
                 <tr>
                     <td>The capital of Massachusetts is:</td>
-                    <td><input type="text" name="Massachusetts" size="25"/></td>
+                    <td><input required type="text" name="Massachusetts" size="25"/></td>
                 </tr>
                 <tr>
                     <td>The capital of New Hampshire is:</td>
-                    <td><input type="text" name="NewHampshire" size="25"/></td>
+                    <td><input required type="text" name="NewHampshire" size="25"/></td>
                 </tr>
                 <tr>
                     <td>The capital of Rhode Island is:</td>
-                    <td><input type="text" name="RhodeIsland" size="25"/></td>
+                    <td><input required type="text" name="RhodeIsland" size="25"/></td>
                 </tr>
                 <tr>
                     <td>The capital of Vermont is:</td>
-                    <td><input type="text" name="Vermont" size="25"/></td>
+                    <td><input required type="text" name="Vermont" size="25"/></td>
                 </tr>
                 <tr></tr>
                 <tr>
