--- a/M03/HOMEWORK/HW2/Q3/StateCapitals.html
+++ b/M03/HOMEWORK/HW2/Q3/StateCapitals.html
@@ -50,6 +50,7 @@ New England State Capitals Quiz
                 <tr>
                     <td><input type="submit" name="submitButton" id="suBmitbutton" value="Submit"/>&nbsp;&nbsp;&nbsp;
                         <input type="reset" name="resetButton" id="resetButton" value="Clear Form"/></td>
+                    <td><div class="card" id="results"></div></td>
                 </tr>
             </table>
 
