--- a/M03/HOMEWORK/HW2/Q3/StateCapitals.html
+++ b/M03/HOMEWORK/HW2/Q3/StateCapitals.html
@@ -23,27 +23,27 @@ New England State Capitals Quiz
 
             <table>
                 <tr>
-                    <td>The capital of Connecticut is:</td>
+                    <td>The capital of Connecticut is: <div class="check" id="Connecticut"></div></td>
                     <td><input required type="text" name="Connecticut" size="25"/></td>
                 </tr>
                 <tr>
-                    <td>The capital of Maine is:</td>
+                    <td>The capital of Maine is: <div class="check" id="Maine"></div></td>
                     <td><input required type="text" name="Maine" size="25"/></td>
                 </tr>
                 <tr>
-                    <td>The capital of Massachusetts is:</td>
+                    <td>The capital of Massachusetts is: <div class="check" id="Massachusetts"></div></td>
                     <td><input required type="text" name="Massachusetts" size="25"/></td>
                 </tr>
                 <tr>
-                    <td>The capital of New Hampshire is:</td>
+                    <td>The capital of New Hampshire is: <div class="check" id="NewHampshire"></div></td>
                     <td><input required type="text" name="NewHampshire" size="25"/></td>
                 </tr>
                 <tr>
-                    <td>The capital of Rhode Island is:</td>
+                    <td>The capital of Rhode Island is: <div class="check" id="RhodeIsland"></div></td>
                     <td><input required type="text" name="RhodeIsland" size="25"/></td>
                 </tr>
                 <tr>
-                    <td>The capital of Vermont is:</td>
+                    <td>The capital of Vermont is: <div class="check" id="Vermont"></div></td>
                     <td><input required type="text" name="Vermont" size="25"/></td>
                 </tr>
                 <tr></tr>
