--- a/M05/LAB/lab3.html
+++ b/M05/LAB/lab3.html
@@ -10,7 +10,7 @@
 <body class="bg-body-secondary">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">Quiz 1</a>
+        <a class="navbar-brand text-white" href="#">Lab 3</a>
 
     </div>
 </nav>
@@ -23,7 +23,8 @@
                 </div>
                 <form id="sqlForm" method="post">
                     <div class="form-group">
-                        <label for="books" class="form-label"><b>Option 1:</b> Select a field to display current book inventory: </label>
+                        <label for="books" class="form-label"><b>Option 1:</b> Select a field to display current book
+                            inventory: </label>
                         <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-sm">Select</span>
                             <select class="form-select" name="book" id="books" aria-label="Default select example">
@@ -36,7 +37,8 @@
                             </select>
 
                         </div>
-                        <label for="authors" class="form-label"><b>Option 2:</b> Select an author to display his/her books:
+                        <label for="authors" class="form-label"><b>Option 2:</b> Select an author to display his/her
+                            books:
                         </label>
                         <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text">Select</span>
